--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -36,7 +36,7 @@
 				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
 			</div>
 		</div>
-		{% else %}	
+		{% else %}
 		<p class="not-seeking">
 			<i class="fas fa-moon"></i> Not currently seeking talent
 		</p>
@@ -73,7 +73,14 @@
 		</div>
 		{% endfor %}
 	</div>
+	<br>
+	<form class="delete" method=post action="{{ url_for('delete_venue', venue_id=venue.id) }}">
+	          <input type="submit" value="Delete Venue">
+	</form>
 </section>
 
-{% endblock %}
 
+
+
+
+{% endblock %}
