--- a/projects/capstone/starter/frontend/src/app/movieform/movieform.component.html
+++ b/projects/capstone/starter/frontend/src/app/movieform/movieform.component.html
@@ -68,36 +68,19 @@
              [(ngModel)]="model.facebook_link" name="facebook_link"
              #facebook_link="ngModel">
    </div>
-
+   
    <div class="form-group">
      <label for="release_date">Release Date</label>
-     <input type="text" class="form-control" id="release_date"
-            required
-            [(ngModel)]="model.release_date" name="release_date"
-            #release_date="ngModel">
-     <div [hidden]="release_date.valid || release_date.pristine"
-          class="alert alert-danger">
-       Release date is required
-     </div>
+     <input style="margin-left: 20px;" matInput [matDatepicker]="relDate"
+     [(ngModel)]="model.release_date" [min]="minToday" [max]="maxDate"
+     placeholder="Choose Release Date"
+     name="release_date" readonly required>
+     <mat-datepicker-toggle matSuffix [for]="relDate"></mat-datepicker-toggle>
+     <mat-datepicker #relDate></mat-datepicker>
    </div>
      <button type="submit" class="btn btn-success" (click)="addMovie()" [disabled]="!movieForm.form.valid">Submit</button>
+    <button style="margin-left: 20px;" type="reset" class="btn btn-default">Reset</button>
   </form>
  </div>
-   <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
-    <div class="row">
-      <div class="col-xs-3">Title</div>
-      <div class="col-xs-9">{{ model.title }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Description</div>
-      <div class="col-xs-9">{{ model.mv_desc }}</div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3">Genres</div>
-      <div class="col-xs-9">{{ model.genres }}</div>
-    </div>
-    <br>
-    <button class="btn btn-primary" (click)="submitted=false">Edit</button>
-  </div>
+<div style="margin-top: 20px;" class="text-danger" *ngIf="error.isError">{{error.errorMessage}}</div>
 </div>
