--- a/projects/capstone/starter/frontend/src/styles.css
+++ b/projects/capstone/starter/frontend/src/styles.css
@@ -7,6 +7,11 @@
     font-size: large;
     font-weight: bold;
 }
+.navbar-btn {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 8px;
+}
 a:hover {
  cursor:pointer;
 }
@@ -15,6 +20,6 @@ a:hover {
     width:auto;
 }
 
-img: hover {
+#img: hover {
     cursor: pointer;
 }
